fixed alignment and added logo

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -58,3 +58,8 @@
    display: table;
    clear: both;
 }
+
+.logo{
+    width: 250px;
+    padding: 2px;
+}
