--- a/src/Pages/pages.css
+++ b/src/Pages/pages.css
@@ -13,7 +13,7 @@
     text-align: center;
     background-image: linear-gradient(90deg, #cdbdbd, #caa7a7);
     padding: 25px;
-    margin: 25px;
+    margin: 25px auto 25px;
     border-radius: 5px;
     font-family: 'PT Serif Caption';
 }
